--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
     "next": "15.0.2",
+    "process": "^0.11.10",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "redis": "^4.7.0"
