--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - API_KEY=8DnL5+4u0fKfvQ/48ArIAg==gcor4LB7WLzwuM8f
+      - API_KEY=${API_KEY}  # مقداردهی از فایل .env
       - CACHE_TTL=300
     depends_on:
       - redis
+      - prometheus
     networks:
       - app-network
 
@@ -24,9 +25,20 @@ services:
     networks:
       - app-network
 
+  prometheus:
+    image: prom/prometheus:latest
+    volumes:
+      - prometheus-data:/prometheus
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
 
 volumes:
   redis-data:
+  prometheus-data:
