--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ioredis": "^5.4.1",
     "next": "15.0.2",
     "process": "^0.11.10",
+    "prom-client": "^15.1.3",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "redis": "^4.7.0"
