--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - API_KEY=${API_KEY}  # مقداردهی از فایل .env
+      - API_KEY=8DnL5+4u0fKfvQ/48ArIAg==gcor4LB7WLzwuM8f
       - CACHE_TTL=300
     depends_on:
       - redis
