--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,6 +2,6 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'node_app'
+  - job_name: 'english-learning-app'
     static_configs:
-      - targets: ['app:3000']
+      - targets: ['127.0.0.1:9090', '127.0.0.1:3000']
