--- a/Service.yaml
+++ b/Service.yaml
@@ -1,41 +1,39 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nextjs-service
-  namespace: demo-ns
+  name: app-service
 spec:
   selector:
-    app: nextjs
+    app: app
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3000
   type: ClusterIP
-
+  clusterIP: 10.96.0.100
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
-  namespace: demo-ns
+  name: redis-service
 spec:
   selector:
     app: redis
   ports:
     - protocol: TCP
       port: 6379
-  clusterIP: None
-
+      targetPort: 6379
+  type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus
-  namespace: demo-ns
+  name: prometheus-service
 spec:
   selector:
     app: prometheus
   ports:
     - protocol: TCP
       port: 9090
-  clusterIP: None
+      targetPort: 9090
+  type: ClusterIP
